--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^3.0.6",
     "body-parser": "^1.15.2",
     "chance": "^1.0.2",
+    "cookie-session": "^1.3.3",
     "express": "^4.13.4",
     "md5": "^2.1.0",
     "moment": "^2.24.0",
